town_hall_1/styles/c5_main.css
/* custom property */
:root {
	--global-color-1: #800000;
	background-color: #ffffff;
}

* {
	margin: 0;
	padding: 0;
}

/* the styles for the elements */
body {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 100%;
	margin-left: 10px;
	width: 600px;
	margin: 0 auto;
	border: 3px solid #931420;
	background-color: #fffded;
}

a:focus, a:hover {
	font-style: italic;
}

/* the styles for the header */
header h2 {
	font-size: 175%;
	color: var(--global-color-1);
}

header h3 {
	font-size: 130%;
	font-style: italic;
}

header img {
	float: left;
	padding-left: 30px;
	padding-right: 30px;
}

header {
	border-bottom: 3px solid #931420;
	padding-top: 1.5em;
	padding-bottom: 2em;
	background-image: linear-gradient(30deg,#f6bb73 0%, #f6bb73 30%, #ffffff 50%, #f6bb73 80%, #f6bb73 100%);
}

.shadow {
	text-shadow: 2px 2px 2px var(--global-color-1);
}

/* the styles for the main content */
main {
	clear: left;
	padding-left: 30px;
	padding-right: 30px;
}

main h1 {
	font-size: 150%;
	padding: .3em 0;
	border: 3px double #931420;
	border-radius: 10px;
	box-shadow: 3px 3px 4px #000000;

}

main h2 {
	color: var(--global-color-1);
	font-size: 130%;
	padding: .5em 0 .25em 0;
}

main h3 {
	font-size: 105%;
	padding-bottom: .25em;
}

main img {
	padding-bottom: 1em;
}

main p {
	padding-bottom: .5em;
}

main blockquote {
	padding: 0 2em;
	font-style: italic;
}

main ul {
	padding: 0 0 .25em 1.25em;
}

main li {
	padding-bottom: .35em;
}

/* the styles for the footer */
footer {
	background-color: #931420;
}

footer p {
	text-align: center;
	padding: 1em 0;
	color: #ffffff;
}

